GUI-7040 fix icon overflow in dataflow panel for firefox

--- a/assets/stylesheets/less/partials/menuBar.less
+++ b/assets/stylesheets/less/partials/menuBar.less
@@ -427,7 +427,6 @@
         .listInfo {
             cursor: pointer;
             .size(@width: 100%, @height: @listHeight);
-            white-space: nowrap;
             overflow: hidden;
             box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.2), inset 0 -1px 0 0 rgba(0, 0, 0, 0.2);
             font-weight: 500;
@@ -472,7 +471,7 @@
             }
 
             .groupName {
-                max-width: ~"calc(100% - 85px)";
+                max-width: ~"calc(100% - 110px)";
                 display: inline-block;
                 .textOverflowOneLine;
             }
